Upload for the version of using makefile to estimating the cache misses.
BreakPoint:
I learn how to use the makefile to compile and let the action of evaluation
more automatic.
I think because my measured resources is using the same character(all using 'h')
Although it ran for 1000 times , it's cache misses still low.
But 1000 times still can see , Iterative's cache miss > Recursive's version.

--- a/q2/Makefile
+++ b/q2/Makefile
@@ -1,6 +1,7 @@
 CC ?= gcc
 CFLAGS_common ?= -O0 -Wall -std=gnu99
 
+CHARACTERS = 'a' 'e' 'g' 'h' 'b' 'z' 'x' 'r' 'l' 'q'
 EXEC = iterative recursive
 all: $(EXEC)
 
@@ -9,6 +10,12 @@ iterative: iterative.c
 
 recursive: recursive.c
 	$(CC) $(CFLAGS_common) -o $@ $@.c
+
+DoIter:
+	$(foreach var,$(CHARACTERS),./iterative $(var) ;)
+
+DoRecu:
+	$(foreach var,$(CHARACTERS),./recursive $(var) ;)
 
 clean:
 	$(RM) $(EXEC) *.o perf.*
