--- a/q4/Makefile
+++ b/q4/Makefile
@@ -10,5 +10,19 @@ iterative: iterative.c
 recursive: recursive.c
 	$(CC) $(CFLAGS_common) -o $@ $@.c
 
+DoItLoop:iterative
+	 @num=1 ; while [ $$num -le 50 ] ; do \
+        echo "Times of $$num" ; \
+        ./iterative $$num; \
+        num=`expr $$num + 1` ; \
+    done
+    
+DoReLoop:recursive
+	@num=1 ; while [ $$num -le 50 ] ; do \
+        echo "Times of $$num" ; \
+        ./recursive $$num; \
+        num=`expr $$num + 1` ; \
+    done
+
 clean:
 	$(RM) $(EXEC) *.o perf.*
